@@ -1,5 +1,9 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE][GH#1825] SSH scripts now run on several ports likely to be SSH based on
+  empirical data from Shodan.io, as well as the netconf-ssh service.
+  [Lim Shi Min Jonathan, Daniel Miller]
+
 o [Zenmap][GH#1777] Stop creating a debugging output file 'tmp.txt' on the
   desktop in macOS. [Roland Linder]
 
